Use robolectric for tests
Change-Id: Id40a5301ab2778af563bf7006c4a8fca20c602fd